tests/semantic/invalid/variable_undefined.c
/*
 * Multi-line comment.
 */

#include <stdint.h>
#include <stdio.h>

int32_t a = b;